--- a/js/npm/package.json
+++ b/js/npm/package.json
@@ -1,37 +1,35 @@
 {
-  "name": "apex-ls",
+  "name": "@apexdevtools/apex-ls",
   "version": "3.0.0",
+  "author": "Apex Dev Tools Team <apexdevtools@gmail.com> (https://github.com/apex-dev-tools)",
+  "bugs": "https://github.com/apex-dev-tools/apex-ls/issues",
   "description": "Salesforce Metadata Management Utility Library",
-  "publisher": "KevinJones",
-  "repository": "nawforce/pkgforce",
-  "author": "Kevin Jones <nawforce@gmail.com> (https://github.com/nawforce)",
+  "repository": "apex-dev-tools/apex-ls",
   "license": "BSD-3-Clause",
-  "bugs": "https://github.com/nawforce/pkgforce/issues",
-  "icon": "logo.png",
+  "main": "lib/apex-ls.js",
+  "types": "lib/apex-ls.d.ts",
   "scripts": {
-    "build": "tsc",
-    "test": "jest --config jestconfig.json lib"
+    "prepack": "cp ../../LICENSE .",
+    "test": "jest"
   },
-  "main": "lib/apexls.js",
-  "typings": "src/apexls.d.ts",
-  "files": [
-    "src/apexls.d.ts"
-  ],
   "dependencies": {
     "antlr4ts": "0.5.0-alpha.4",
     "@apexdevtools/apex-parser": "3.0.0",
     "@apexdevtools/vf-parser": "1.0.0",
-    "@xmldom/xmldom": "0.7.5"
+    "@xmldom/xmldom": "0.7.6"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.2",
-    "fs-monkey": "0.3.3",
-    "jest": "^27.2.5",
-    "memfs": "3.2.0",
-    "ts-jest": "^27.0.5",
-    "typescript": "^4.4.4"
+    "@types/jest": "^29.2.0",
+    "fs-monkey": "^1.0.3",
+    "jest": "^29.2.0",
+    "memfs": "^3.4.7",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.8.4"
   },
   "engines": {
     "node": ">=14.0.0"
-  }
+  },
+  "files": [
+    "lib/**/*"
+  ]
 }
