fix: Add module resolution mappings for testing named import

--- a/js/npm/jest.config.json
+++ b/js/npm/jest.config.json
@@ -1,8 +1,7 @@
 {
   "preset": "ts-jest",
   "testEnvironment": "node",
-  "moduleDirectories": [
-    "node_modules",
-    "lib"
-  ]
+  "moduleNameMapper": {
+    "@apexdevtools/apex-ls": "<rootDir>/lib/apex-ls"
+  }
 }
