build: Add npm publish step

--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -40,3 +40,13 @@ jobs:
           PGP_SECRET: ${{ secrets.OSSRH_GPG_SECRET_KEY }}
           SONATYPE_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
           SONATYPE_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+
+      # Only publishes full releases to NPM
+      - name: Publish NPM
+        if: ${{ github.event_name == 'release' && github.event.action == 'released' }}
+        run: |
+          npm version $(cd ../.. && sbt "print getVersion" --error)
+          npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        working-directory: js/npm
