build: Add fallback to publish npm if build fails

--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -10,6 +10,11 @@ on:
         type: boolean
         required: true
         default: false
+      pub_npm:
+        description: 'Publish to NPM (ONLY run on tag)'
+        type: boolean
+        required: true
+        default: false
 
 jobs:
   publish:
@@ -43,7 +48,7 @@ jobs:
 
       # Only publishes full releases to NPM
       - name: Publish NPM
-        if: ${{ github.event_name == 'release' && github.event.action == 'released' }}
+        if: ${{ github.event_name == 'release' && github.event.action == 'released' || inputs.pub_npm }}
         run: |
           npm version $(cd ../.. && sbt "print getVersion" --error)
           npm publish --access public
