--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -59,7 +59,9 @@ jobs:
       - name: Publish NPM
         if: ${{ github.event_name == 'release' && github.event.action == 'released' || inputs.pub_npm }}
         run: |
-          npm version "$(cd $GITHUB_WORKSPACE && sbt "print getVersion" --error)"
+          ver="$(cd $GITHUB_WORKSPACE && sbt "print getVersion" --error)"
+          echo "Found dynamic version $ver"
+          npm version "$ver"
           npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
