build: Use npm tag versioning

--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -16,7 +16,7 @@ on:
         required: true
         default: true
       pub_npm:
-        description: 'Publish NPM (ONLY run on tag)'
+        description: 'Publish NPM (Latest Tag)'
         type: boolean
         required: true
         default: false
@@ -59,9 +59,7 @@ jobs:
       - name: Publish NPM
         if: ${{ github.event_name == 'release' && github.event.action == 'released' || inputs.pub_npm }}
         run: |
-          ver="$(cd $GITHUB_WORKSPACE && sbt "print getVersion" --error)"
-          echo "Found dynamic version $ver"
-          npm version "$ver"
+          npm version --allow-same-version --no-git-tag-version from-git
           npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
