--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -38,6 +38,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
+          registry-url: 'https://registry.npmjs.org'
 
       - name: Build
         run: sbt build
