--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -7,9 +7,6 @@ on:
     branches: [ "**" ]
   workflow_dispatch:
 
-env:
-  TESTCMD: java -cp "jvm/target/scala-2.13/*:jvm/target/scala-2.13/apex-ls_2.13-*.jar" io.github.apexdevtools.apexls.Main -verbose -nocache -outlinemulti
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -29,6 +26,12 @@ jobs:
         cache: 'npm'
         cache-dependency-path: js/npm/package-lock.json
 
+    - name: Build
+      run: sbt build
+
+    - name: Test
+      run: sbt test
+
     - name: Checkout samples repo
       uses: actions/checkout@v3
       with:
@@ -36,354 +39,9 @@ jobs:
         repository: apex-dev-tools/apex-samples
         path: apex-samples
 
-    - name: Build
-      run: sbt build
-
-    - name: Test
-      run: sbt test
-
-    - name: TriggerX
-      run: ${{env.TESTCMD}} apex-samples/TriggerX/TriggerX
-
-    - name: apex-query-builder 
-      run: ${{env.TESTCMD}} apex-samples/apex-query-builder/apex-query-builder
-
-    - name: salesforce-bot-toolkit 
-      run: ${{env.TESTCMD}} apex-samples/salesforce-bot-toolkit/salesforce-bot-toolkit
-
-    - name: SalesforceDurableStreamingDemo 
-      run: ${{env.TESTCMD}} apex-samples/SalesforceDurableStreamingDemo/SalesforceDurableStreamingDemo
-
-    - name: amoss 
-      run: ${{env.TESTCMD}} apex-samples/amoss/amoss
-
-    - name: SimpleLightningComponents
-      run: ${{env.TESTCMD}} apex-samples/SimpleLightningComponents/SimpleLightningComponents
-
-    # Unreachable statement, throw + return
-    #- name: FormulaShare-DX 
-    #  run: ${{env.TESTCMD}} apex-samples/FormulaShare-DX/FormulaShare-DX
-
-    - name: Apex-for-Xero 
-      run: ${{env.TESTCMD}} apex-samples/Apex-for-Xero/Apex-for-Xero
-
-    - name: sendgrid-apex 
-      run: ${{env.TESTCMD}} apex-samples/sendgrid-apex/sendgrid-apex
-
-    # Project can't be deployed needs to be removed
-    #- name: FindNearby
-    #  run: ${{env.TESTCMD}} apex-samples/FindNearby
-
-    # No matching method found for 'getAsyncApexJobResult' on 'System.FinalizerContext'.
-    # This project cannot be pushed.
-    #- name: promiseV3 
-    #  run: java -cp "apexlink/target/dependency/*:apexlink/target/apexlink-1.4.2.jar" com.nawforce.apexlink.ApexLink -verbose -nocache -outlinemulti apex-samples/promiseV3/promiseV3
-
-    # Issue around Method 'System.Boolean equals(Object)' from interface 'Object' not being implemented. Needs to be fixed
-    # - name: Apex-Opensource-Library 
-    #  run: ${{env.TESTCMD}} apex-samples/Apex-Opensource-Library/Apex-Opensource-Library
-
-    - name: SFDCRules 
-      run: ${{env.TESTCMD}} apex-samples/SFDCRules/SFDCRules
-
-    - name: forcelog 
-      run: ${{env.TESTCMD}} apex-samples/forcelog/forcelog
-
-    - name: Apex-XML-Serializer 
-      run: ${{env.TESTCMD}} apex-samples/Apex-XML-Serializer/Apex-XML-Serializer
-
-    - name: ObjectMerge 
-      run: ${{env.TESTCMD}} apex-samples/ObjectMerge/ObjectMerge
-
-    - name: grid 
-      run: ${{env.TESTCMD}} apex-samples/grid/grid
-
-    # Unreachable statement, bad if/else logic
-    #- name: soql-secure 
-    #  run: ${{env.TESTCMD}} apex-samples/soql-secure/soql-secure
-
-    - name: box-salesforce-sdk 
-      run: ${{env.TESTCMD}} apex-samples/box-salesforce-sdk/box-salesforce-sdk
-
-    - name: Angular 
-      run: ${{env.TESTCMD}} apex-samples/Angular/Angular
-
-    - name: Lightweight-Trigger-Framework 
-      run: ${{env.TESTCMD}} apex-samples/Lightweight-Trigger-Framework/Lightweight-Trigger-Framework
-
-    - name: SObjectFabricator 
-      run: ${{env.TESTCMD}} apex-samples/SObjectFabricator/SObjectFabricator
-
-    - name: ApexTriggerHandler 
-      run: ${{env.TESTCMD}} apex-samples/ApexTriggerHandler/ApexTriggerHandler
-
-    - name: forcedotcom-enterprise-architecture 
-      run: ${{env.TESTCMD}} apex-samples/forcedotcom-enterprise-architecture/forcedotcom-enterprise-architecture
-
-    - name: sf-sandbox-post-copy 
-      run: ${{env.TESTCMD}} apex-samples/sf-sandbox-post-copy/sf-sandbox-post-copy
-
-    - name: Multi-File-Uploader-Force 
-      run: ${{env.TESTCMD}} apex-samples/Multi-File-Uploader-Force/Multi-File-Uploader-Force
-
-    - name: logger 
-      run: ${{env.TESTCMD}} apex-samples/logger/logger
-
-    - name: apex-sobjectdataloader 
-      run: ${{env.TESTCMD}} apex-samples/apex-sobjectdataloader/apex-sobjectdataloader
-
-    - name: q 
-      run: ${{env.TESTCMD}} apex-samples/q/q
-
-    - name: MyTriggers 
-      run: ${{env.TESTCMD}} apex-samples/MyTriggers/MyTriggers
-
-    - name: ForceDotComSprintWall 
-      run: ${{env.TESTCMD}} apex-samples/ForceDotComSprintWall/ForceDotComSprintWall
-
-    - name: apex-rest-route 
-      run: ${{env.TESTCMD}} apex-samples/apex-rest-route/apex-rest-route
-
-    - name: flowtoolbelt 
-      run: ${{env.TESTCMD}} apex-samples/flowtoolbelt/flowtoolbelt
-
-    - name: user-access-visualization 
-      run: ${{env.TESTCMD}} apex-samples/user-access-visualization/user-access-visualization
-
-    - name: einstein-ai 
-      run: ${{env.TESTCMD}} apex-samples/einstein-ai/einstein-ai
-
-    # Duplicate type
-    # - name: purealoe-lwc
-    # run: ${{env.TESTCMD}} apex-samples/purealoe-lwc
-
-    - name: HyperBatch 
-      run: ${{env.TESTCMD}} apex-samples/HyperBatch
-
-    # Missing class DmlWrapper
-    # - name: Interactions-for-Student-Recruitment
-    #  run: ${{env.TESTCMD}} apex-samples/Interactions-for-Student-Recruitment
-
-    - name: sobject-work-queue 
-      run: ${{env.TESTCMD}} apex-samples/sobject-work-queue/sobject-work-queue
-
-    - name: ffhttp-core 
-      run: ${{env.TESTCMD}} apex-samples/ffhttp-core/ffhttp-core
-
-    - name: Force.com-Toolkit-for-Facebook 
-      run: ${{env.TESTCMD}} apex-samples/Force.com-Toolkit-for-Facebook/Force.com-Toolkit-for-Facebook
-
-    - name: sfdc-oauth-playground 
-      run: ${{env.TESTCMD}} apex-samples/sfdc-oauth-playground/sfdc-oauth-playground
-
-    - name: salesforce-limit-monitor 
-      run: ${{env.TESTCMD}} apex-samples/salesforce-limit-monitor/salesforce-limit-monitor
-
-    # Unreachable statement, throw + return
-    #- name: Centralized-Salesforce-Dev-Framework
-    #  run: ${{env.TESTCMD}} apex-samples/Centralized-Salesforce-Dev-Framework/Centralized-Salesforce-Dev-Framework
-
-    - name: eventlogging 
-      run: ${{env.TESTCMD}} apex-samples/eventlogging/eventlogging
-
-    - name: quiz-host-app 
-      run: ${{env.TESTCMD}} apex-samples/quiz-host-app/quiz-host-app
-
-    - name: sfdc-related-files-lightning 
-      run: ${{env.TESTCMD}} apex-samples/sfdc-related-files-lightning/sfdc-related-files-lightning
-
-    - name: sObject-Remote 
-      run: ${{env.TESTCMD}} apex-samples/sObject-Remote/sObject-Remote
-
-    - name: apex-domainbuilder 
-      run: ${{env.TESTCMD}} apex-samples/apex-domainbuilder/apex-domainbuilder
-
-    - name: Force.com-Helper-Classes 
-      run: ${{env.TESTCMD}} apex-samples/Force.com-Helper-Classes/Force.com-Helper-Classes
-
-    - name: selector 
-      run: ${{env.TESTCMD}} apex-samples/selector/selector
-
-    - name: R-apex 
-      run: ${{env.TESTCMD}} apex-samples/R-apex/R-apex
-
-    # https://github.com/apex-dev-tools/apex-ls/issues/19
-    #- name: rflib 
-    #  run: ${{env.TESTCMD}} apex-samples/rflib/rflib
-
-    - name: apex-dml-manager 
-      run: ${{env.TESTCMD}} apex-samples/apex-dml-manager/apex-dml-manager
-
-    - name: ConnectApiHelper 
-      run: ${{env.TESTCMD}} apex-samples/ConnectApiHelper/ConnectApiHelper
-
-    - name: sfdc-convert-attachments-to-chatter-files 
-      run: ${{env.TESTCMD}} apex-samples/sfdc-convert-attachments-to-chatter-files/sfdc-convert-attachments-to-chatter-files
-
-    - name: Forceea-data-factory 
-      run: ${{env.TESTCMD}} apex-samples/Forceea-data-factory/Forceea-data-factory/dx
-
-    # project is valid and can be deployed with no modification. However, there seems to be an issues around finding types that needs more investigation
-    # - name: ApexTestKit
-    #  run: ${{env.TESTCMD}} apex-samples/ApexTestKit/ApexTestKit
-
-    - name: jsonparse 
-      run: ${{env.TESTCMD}} apex-samples/jsonparse/jsonparse
-
-    - name: sirono-common 
-      run: ${{env.TESTCMD}} apex-samples/sirono-common/sirono-common
-
-    # Winter 23 API
-    # - name: apex-trigger-actions-framework
-    #   run: ${{env.TESTCMD}} apex-samples/apex-trigger-actions-framework/apex-trigger-actions-framework
-
-    - name: esapi 
-      run: ${{env.TESTCMD}} apex-samples/esapi/esapi
-
-    - name: EnhancedLightningGrid 
-      run: ${{env.TESTCMD}} apex-samples/EnhancedLightningGrid/EnhancedLightningGrid
-
-    - name: processBuilderBlocks 
-      run: ${{env.TESTCMD}} apex-samples/processBuilderBlocks/processBuilderBlocks
-
-    - name: promise 
-      run: ${{env.TESTCMD}} apex-samples/promise/promise
-
-    - name: Query.apex 
-      run: ${{env.TESTCMD}} apex-samples/Query.apex/Query.apex
-
-    - name: apex-unified-logging 
-      run: ${{env.TESTCMD}} apex-samples/apex-unified-logging/apex-unified-logging
-
-    - name: Zippex 
-      run: ${{env.TESTCMD}} apex-samples/Zippex/Zippex
-
-    - name: TestDataFactory 
-      run: ${{env.TESTCMD}} apex-samples/TestDataFactory/TestDataFactory
-
-    - name: automation-components 
-      run: ${{env.TESTCMD}} apex-samples/automation-components/automation-components
-
-    - name: force-di 
-      run: ${{env.TESTCMD}} apex-samples/force-di/force-di
-
-    - name: EDA
-      run: ${{env.TESTCMD}} apex-samples/EDA/EDA
-
-    - name: apex-lambda 
-      run: ${{env.TESTCMD}} apex-samples/apex-lambda/apex-lambda
-
-    - name: sfdx-mass-action-scheduler 
-      run: ${{env.TESTCMD}} apex-samples/sfdx-mass-action-scheduler/sfdx-mass-action-scheduler
-
-    # Winter 23 API
-    # - name: apex-recipes
-    #   run: ${{env.TESTCMD}} apex-samples/apex-recipes/apex-recipes
-
-    # Project not deployable as is. May need building for the errors to disappear
-    # Error seems to be able to about no resolving a class
-    #- name: NPSP 
-    #  run: ${{env.TESTCMD}} apex-samples/NPSP
-
-    - name: apex-mdapi 
-      run: ${{env.TESTCMD}} apex-samples/apex-mdapi/apex-mdapi
-
-    # Issue around apex-parser
-    # https://github.com/apex-dev-tools/apex-ls/issues/16
-    # https://github.com/apex-dev-tools/apex-ls/issues/15
-    # - name: apex-rollup 
-    #  run: ${{env.TESTCMD}} apex-samples/apex-rollup/apex-rollup
-
-    # https://github.com/apex-dev-tools/apex-ls/issues/18
-    # One more issue around not finding fields in custom SObjects that needs more investigation
-    # - name: NebulaLogger
-    #  run: ${{env.TESTCMD}} apex-samples/NebulaLogger/NebulaLogger
-
-    - name: apex-toolingapi 
-      run: ${{env.TESTCMD}} apex-samples/apex-toolingapi/apex-toolingapi
-
-    - name: Automated-Testing-for-Force 
-      run: ${{env.TESTCMD}} apex-samples/Automated-Testing-for-Force/Automated-Testing-for-Force
-
-    # Unreachable statement, throw + return
-    #- name: CustomMetadataLoader
-    #  run: ${{env.TESTCMD}} apex-samples/CustomMetadataLoader/CustomMetadataLoader
-
-    - name: declarative-lookup-rollup-summaries 
-      run: ${{env.TESTCMD}} apex-samples/declarative-lookup-rollup-summaries/declarative-lookup-rollup-summaries
-
-    - name: df12-apex-enterprise-patterns 
-      run: ${{env.TESTCMD}} apex-samples/df12-apex-enterprise-patterns/df12-apex-enterprise-patterns
-
-    - name: df12-deployment-tools 
-      run: ${{env.TESTCMD}} apex-samples/df12-deployment-tools/df12-deployment-tools
-
-    - name: dreamhouse-sfdx 
-      run: ${{env.TESTCMD}} apex-samples/dreamhouse-sfdx/dreamhouse-sfdx
-
-    - name: fflib-apex-mocks 
-      run: ${{env.TESTCMD}} apex-samples/fflib-apex-mocks/fflib-apex-mocks
-
-    - name: fflib-apex-common 
-      run: |
-        cp -r apex-samples/fflib-apex-mocks/fflib-apex-mocks apex-samples/fflib-apex-common
-        ${{env.TESTCMD}} apex-samples/fflib-apex-common
-
-    - name: fflib-apex-common-samplecode 
-      run: |
-        cp -r apex-samples/fflib-apex-mocks/fflib-apex-mocks apex-samples/fflib-apex-common-samplecode
-        cp -r apex-samples/fflib-apex-common/fflib-apex-common apex-samples/fflib-apex-common-samplecode
-        ${{env.TESTCMD}} apex-samples/fflib-apex-common-samplecode
-
-    - name: at4dx 
-      run: |
-        cp -r apex-samples/fflib-apex-mocks/fflib-apex-mocks apex-samples/at4dx
-        cp -r apex-samples/fflib-apex-common/fflib-apex-common apex-samples/at4dx
-        cp -r apex-samples/force-di/force-di apex-samples/at4dx
-        ${{env.TESTCMD}} apex-samples/at4dx
-
-    - name: HEDAP 
-      run: ${{env.TESTCMD}} apex-samples/HEDAP/HEDAP
-
-    # Unreachable statement, bad if/else logic
-    #- name: Milestones-PM
-    #  run: ${{env.TESTCMD}} apex-samples/Milestones-PM/Milestones-PM
-
-    - name: Salesforce-Lookup-Rollup-Summaries 
-      run: ${{env.TESTCMD}} apex-samples/Salesforce-Lookup-Rollup-Summaries/Salesforce-Lookup-Rollup-Summaries
-
-    - name: Salesforce-Test-Factory 
-      run: ${{env.TESTCMD}} apex-samples/Salesforce-Test-Factory/Salesforce-Test-Factory
-
-    - name: sfdc-trigger-framework 
-      run: ${{env.TESTCMD}} apex-samples/sfdc-trigger-framework/sfdc-trigger-framework
-
-    - name: SmartFactory-for-Force.com 
-      run: ${{env.TESTCMD}} apex-samples/SmartFactory-for-Force/SmartFactory-for-Force
-
-    # Unreachable statement, double return
-    #- name: twilio-salesforce
-    #  run: ${{env.TESTCMD}} apex-samples/twilio-salesforce/twilio-salesforce
-
-    - name: Visualforce-Multiselect-Picklist 
-      run: ${{env.TESTCMD}} apex-samples/Visualforce-Multiselect-Picklist/Visualforce-Multiselect-Picklist
-
-    - name: visualforce-table-grid 
-      run: ${{env.TESTCMD}} apex-samples/visualforce-table-grid/visualforce-table-grid
-
-    - name: visualforce-typeahead 
-      run: ${{env.TESTCMD}} apex-samples/visualforce-typeahead/visualforce-typeahead
-
-    # SObject issue could be related to https://github.com/apex-dev-tools/apex-ls/issues/19
-    # Errors around resolving a clas that's in an unpackaged folder that contains a package.xml
-    # - name: Cumulus
-    #  run: ${{env.TESTCMD}} apex-samples/Cumulus
-
-    # Winter 23 API
-    # - name: ActionPlansV4
-    #   run: ${{env.TESTCMD}} apex-samples/ActionPlansV4/ActionPlansV4
-
-    - name: survey-force
-      run: ${{env.TESTCMD}} apex-samples/survey-force/survey-force
-
-
+    - name: Set samples env
+      run: echo "SAMPLES=$GITHUB_WORKSPACE/apex-samples" >> "$GITHUB_ENV"
+
+    - name: System Test
+      run: npm run test-samples
+      working-directory: js/npm
