--- a/js/npm/package.json
+++ b/js/npm/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.2.0",
+    "chalk": "^4.1.2",
     "fs-monkey": "^1.0.3",
     "jest": "^29.2.0",
     "memfs": "^3.4.7",
