--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -48,7 +48,7 @@ jobs:
         run: sbt test
 
       - name: Publish JARs
-        if: ${{ inputs.pub_sbt }}
+        if: ${{ github.event_name == 'release' && github.event.action == 'released' || inputs.pub_sbt }}
         run: sbt ci-release
         env:
           PGP_PASSPHRASE: ${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD }}
