test: WIP of adding test for gulped modules

--- a/samples/dependency-counts/sfdx-project.json
+++ b/samples/dependency-counts/sfdx-project.json
@@ -5,7 +5,10 @@
       "default": true
     }
   ],
-  "namespace": "",
+  "namespace": "pkg",
   "sfdcLoginUrl": "https://login.salesforce.com",
-  "sourceApiVersion": "48.0"
+  "sourceApiVersion": "48.0",
+  "plugins": {
+    "additionalNamespaces": ["ns1"]
+  }
 }
