Add RPC API to get dependency counts for all classes & triggers

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -5,6 +5,7 @@ indent.defnSite = 2
 optIn.configStyleArguments = false
 align.preset = more
 maxColumn = 100
+docstrings.wrap = "no"
 
 # Shorthand set runner.dialect for sbt files
 fileOverride { "glob:**/*.sbt" = sbt1 }
