--- a/.github/workflows/BuildCrossPlatform.yml
+++ b/.github/workflows/BuildCrossPlatform.yml
@@ -15,7 +15,7 @@ jobs:
 
     runs-on: ${{ matrix.os }}
 
-    name: 'Cross build - ${{ matrix.os }}, Java ${{ matrix.java_version }}'
+    name: "Cross build - ${{ matrix.os }}, Java ${{ matrix.java_version }}"
 
     steps:
       - run: git config --global core.autocrlf false
@@ -24,16 +24,15 @@ jobs:
 
       - uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
+          distribution: "temurin"
           java-version: ${{ matrix.java_version }}
 
       - uses: actions/setup-node@v4
         with:
-          node-version: 16
-    
+          node-version: 20
+
       - name: Build
         run: sbt build
 
       - name: Test
         run: sbt test
-
