--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -20,6 +20,8 @@ jobs:
           java-version: 8
           cache: "sbt"
 
+      - uses: sbt/setup-sbt@v1
+
       - uses: actions/setup-node@v4
         with:
           node-version: 20
