--- a/.github/workflows/BuildCrossPlatform.yml
+++ b/.github/workflows/BuildCrossPlatform.yml
@@ -27,6 +27,8 @@ jobs:
           distribution: "temurin"
           java-version: ${{ matrix.java_version }}
 
+      - uses: sbt/setup-sbt@v1
+
       - uses: actions/setup-node@v4
         with:
           node-version: 20
