--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -35,6 +35,8 @@ jobs:
           distribution: "temurin"
           java-version: 8
 
+      - uses: sbt/setup-sbt@v1
+
       - uses: actions/setup-node@v4
         with:
           node-version: 20
