feat: implement dual distribution strategy for MCP server publishing
- Add sbt-assembly plugin for standalone JAR creation
- Configure Maven Central publishing for regular JAR with dependencies
- Setup GitHub Releases publishing for user-friendly fat JAR
- Update GitHub Actions workflows for dual publishing strategy
- Fix SLF4J logging configuration in standalone JAR
- Update documentation with accurate tool parameters and installation methods
- Add experimental MCP support section to main README
- Remove .jqwik-database artifacts and add to .gitignore

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -37,6 +37,23 @@ jobs:
       - name: Test
         run: sbt test
 
+      - name: Build MCP Server (Regular)
+        run: |
+          cd mcp
+          sbt test
+          sbt buildRegular
+
+      - name: Build MCP Server (Standalone)
+        run: |
+          cd mcp
+          sbt buildStandalone
+
+      - name: Upload Standalone JAR as Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: apex-ls-mcp-standalone
+          path: mcp/target/scala-2.13/apex-ls-mcp-*-standalone.jar
+
       - name: Checkout samples repo
         uses: actions/checkout@v4
         with:
