fix: update GitHub Actions to support both Java 8 and Java 17
Install both Java 8 and 17 in workflows and use appropriate versions:
- Java 8 for parent project builds, tests, and publishing
- Java 17 for MCP subproject builds and tests

This resolves the 'invalid source release: 17' error by ensuring each
build step uses the correct Java version for its requirements.

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -17,10 +17,17 @@ jobs:
       - uses: actions/setup-java@v4
         with:
           distribution: "temurin"
-          java-version: 8
+          java-version: |
+            8
+            17
           cache: "sbt"
 
       - uses: sbt/setup-sbt@v1
+
+      - name: Set Java environment variables
+        run: |
+          echo "JAVA_HOME_8=$JAVA_HOME_8_X64" >> $GITHUB_ENV
+          echo "JAVA_HOME_17=$JAVA_HOME_17_X64" >> $GITHUB_ENV
 
       - uses: actions/setup-node@v4
         with:
@@ -30,23 +37,33 @@ jobs:
 
       - name: FormatCheck
         run: sbt scalafmtCheck # Does not check test files currently
+        env:
+          JAVA_HOME: ${{ env.JAVA_HOME_8 }}
 
       - name: Build
         run: sbt build
+        env:
+          JAVA_HOME: ${{ env.JAVA_HOME_8 }}
 
       - name: Test
         run: sbt test
+        env:
+          JAVA_HOME: ${{ env.JAVA_HOME_8 }}
 
       - name: Build MCP Server (Regular)
         run: |
           cd mcp
           sbt test
           sbt buildRegular
+        env:
+          JAVA_HOME: ${{ env.JAVA_HOME_17 }}
 
       - name: Build MCP Server (Standalone)
         run: |
           cd mcp
           sbt buildStandalone
+        env:
+          JAVA_HOME: ${{ env.JAVA_HOME_17 }}
 
       - name: Upload Standalone JAR as Artifact
         uses: actions/upload-artifact@v4
@@ -69,3 +86,5 @@ jobs:
         shell: 'script -q -e -c "bash {0}"' # Color support
         run: npm run test-samples
         working-directory: js/npm
+        env:
+          JAVA_HOME: ${{ env.JAVA_HOME_8 }}
