feat: upgrade development to Java 17 with Java 8 runtime compatibility
- Add javac options to target Java 8 bytecode while using Java 17 toolchain
- Simplify GitHub Actions workflows to use single Java 17 setup
- Add MCP build validation to cross-platform testing
- Update documentation with Java 17 development requirements
- Maintain Java 8 runtime compatibility for end users

Tested: Generated JAR uses bytecode version 52 (Java 8 compatible)

--- a/.github/workflows/BuildCrossPlatform.yml
+++ b/.github/workflows/BuildCrossPlatform.yml
@@ -38,3 +38,10 @@ jobs:
 
       - name: Test
         run: sbt test
+
+      - name: Build MCP Server
+        if: ${{ matrix.java_version >= 17 }}
+        run: |
+          cd mcp
+          sbt test
+          sbt buildRegular
