--- a/.github/workflows/UnitTest.yml
+++ b/.github/workflows/UnitTest.yml
@@ -13,17 +13,11 @@ jobs:
       - uses: actions/setup-java@v4
         with:
           distribution: "temurin"
-          java-version: |
-            8
-            17
+          java-version: "17"
           cache: "sbt"
 
       - uses: sbt/setup-sbt@v1
 
-      - name: Set Java environment variables
-        run: |
-          echo "JAVA_HOME_8=$JAVA_HOME_8_X64" >> $GITHUB_ENV
-          echo "JAVA_HOME_17=$JAVA_HOME_17_X64" >> $GITHUB_ENV
 
       - uses: actions/setup-node@v4
         with:
@@ -33,10 +27,6 @@ jobs:
 
       - name: Build
         run: sbt build
-        env:
-          JAVA_HOME: ${{ env.JAVA_HOME_8 }}
 
       - name: Test
         run: sbt test
-        env:
-          JAVA_HOME: ${{ env.JAVA_HOME_8 }}
