--- a/js/npm/package.json
+++ b/js/npm/package.json
@@ -24,6 +24,7 @@
     "@types/jest": "^29.2.0",
     "chalk": "^4.1.2",
     "fs-monkey": "^1.0.3",
+    "ignore": "5.3.2",
     "jest": "^29.2.0",
     "memfs": "^3.4.7",
     "ts-jest": "^29.0.3",
