ci: integrate mcp-npm package builds into GitHub Actions
Update both main and cross-platform CI workflows to build and test
the mcp-npm package:

- Add npm cache configuration for mcp-npm/package-lock.json
- Build and lint mcp-npm package in CI pipeline
- Run unit tests for mcp-npm package
- Cross-platform testing on Ubuntu and Windows
- Java 17+ requirement validation (same as MCP server)
- Remove duplicate standalone workflow for mcp-npm

This ensures the npm wrapper package is properly validated across
different environments before distribution.

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -27,7 +27,9 @@ jobs:
         with:
           node-version: 22
           cache: "npm"
-          cache-dependency-path: js/npm/package-lock.json
+          cache-dependency-path: |
+            js/npm/package-lock.json
+            mcp-npm/package-lock.json
 
       - name: FormatCheck
         run: sbt scalafmtCheck # Does not check test files currently
@@ -48,6 +50,18 @@ jobs:
         run: |
           cd mcp
           sbt buildStandalone
+
+      - name: Build MCP NPM Package
+        run: |
+          cd mcp-npm
+          npm ci
+          npm run build
+          npm run lint
+
+      - name: Test MCP NPM Package
+        run: |
+          cd mcp-npm
+          npm run test:unit
 
       - name: Checkout samples repo
         uses: actions/checkout@v4
