fix(ci): skip postinstall scripts during CI builds
Add --ignore-scripts flag to npm ci commands to prevent the postinstall
script from running during CI builds. The postinstall script downloads
the MCP server JAR for end users, but shouldn't run during development
builds where:

- The TypeScript files haven't been compiled yet
- External downloads aren't needed for validation
- The target JAR version may not exist in releases yet

This allows CI to focus on building and testing the npm package itself
without attempting to download external dependencies.

--- a/.github/workflows/BuildCrossPlatform.yml
+++ b/.github/workflows/BuildCrossPlatform.yml
@@ -54,7 +54,7 @@ jobs:
         if: ${{ matrix.java_version >= 17 }}
         run: |
           cd mcp-npm
-          npm ci
+          npm ci --ignore-scripts
           npm run build
           npm run lint
 
