--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Build MCP NPM Package
         run: |
           cd mcp-npm
-          npm ci
+          npm ci --ignore-scripts
           npm run build
           npm run lint
 
