feat(mcp-npm): add files property to package.json
Add files property to limit published package contents to only necessary
distribution files (dist/, bin/, README.md). This reduces package size
from 73.8 kB to 32.3 kB by excluding TypeScript source, tests, and
build scripts.

--- a/mcp-npm/package.json
+++ b/mcp-npm/package.json
@@ -6,6 +6,11 @@
   "bin": {
     "apex-ls-mcp": "./bin/apex-ls-mcp"
   },
+  "files": [
+    "dist/",
+    "bin/",
+    "README.md"
+  ],
   "config": {
     "jarVersion": "5.11.0",
     "downloadUrl": "https://github.com/apex-dev-tools/apex-ls/releases/download/v{jarVersion}/apex-ls-mcp-{jarVersion}-standalone.jar"
