refactor(mcp-npm): address PR feedback
- Use working-directory in GitHub Actions workflow instead of cd
- Remove duplicate entries from .gitignore
- Simplify bin setup by pointing directly to dist/cli.js, removing wrapper script
- Improve ZIP file signature check readability with named constant
- Fix test matchers and regex patterns

--- a/mcp-npm/.gitignore
+++ b/mcp-npm/.gitignore
@@ -1,9 +1,3 @@
-node_modules/
-*.log
-.DS_Store
-.npm
-*.tgz
-
 # Build output
 dist/
 bin/
@@ -29,6 +23,12 @@ node_modules/
 
 # Output of 'npm pack'
 *.tgz
+
+# Logs
+*.log
+
+# OS files
+.DS_Store
 
 # JAR files (except test fixtures)
 *.jar
