--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -41,27 +41,25 @@ jobs:
         run: sbt test
 
       - name: Build MCP Server (Regular)
+        working-directory: mcp
         run: |
-          cd mcp
           sbt test
           sbt buildRegular
 
       - name: Build MCP Server (Standalone)
-        run: |
-          cd mcp
-          sbt buildStandalone
+        working-directory: mcp
+        run: sbt buildStandalone
 
       - name: Build MCP NPM Package
+        working-directory: mcp-npm
         run: |
-          cd mcp-npm
           npm ci --ignore-scripts
           npm run build
           npm run lint
 
       - name: Test MCP NPM Package
-        run: |
-          cd mcp-npm
-          npm run test:unit
+        working-directory: mcp-npm
+        run: npm run test:unit
 
       - name: Checkout samples repo
         uses: actions/checkout@v4
