ci: add publish step for mcp npm package

--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -25,6 +25,11 @@ on:
         type: boolean
         required: true
         default: true
+      pub_mcp_npm:
+        description: "Publish MCP NPM (Fixed version)"
+        type: boolean
+        required: true
+        default: false
 
 jobs:
   publish:
@@ -41,7 +46,6 @@ jobs:
           java-version: "17"
 
       - uses: sbt/setup-sbt@v1
-
 
       - uses: actions/setup-node@v4
         with:
@@ -101,3 +105,11 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         working-directory: js/npm
+
+      # Publishes only the version specified in mcp-npm/package.json
+      - name: Publish MCP NPM
+        if: ${{ github.event_name == 'release' && github.event.action == 'released' || inputs.pub_mcp_npm }}
+        run: npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        working-directory: mcp-npm
