--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -110,6 +110,7 @@ jobs:
         run: |
           npm ci --ignore-scripts
           npm run build
+          npm version --allow-same-version --no-git-tag-version from-git
           npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
