--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -11,7 +11,7 @@ on:
         required: true
         default: false
       pub_sbt:
-        description: "Publish JARs"
+        description: "Publish JAR"
         type: boolean
         required: true
         default: true
@@ -20,11 +20,16 @@ on:
         type: boolean
         required: true
         default: false
-      pub_mcp:
-        description: "Publish MCP Server"
+      pub_mcp_sbt:
+        description: "Publish MCP JAR"
         type: boolean
         required: true
-        default: true
+        default: false
+      pub_mcp_gh:
+        description: "Publish MCP Github Release"
+        type: boolean
+        required: true
+        default: false
       pub_mcp_npm:
         description: "Publish MCP NPM (Latest Tag)"
         type: boolean
@@ -59,7 +64,7 @@ jobs:
         if: ${{ !inputs.skip_tests }}
         run: sbt test
 
-      - name: Publish JARs
+      - name: Publish JAR
         if: ${{ github.event_name == 'release' && github.event.action == 'released' || inputs.pub_sbt }}
         run: sbt ci-release
         env:
@@ -69,7 +74,7 @@ jobs:
           SONATYPE_USERNAME: ${{ secrets.OSSRH_USERNAME }}
 
       - name: Publish MCP Server to Maven Central
-        if: ${{ (github.event_name == 'release' && github.event.action == 'released' || inputs.pub_mcp) && (github.event_name == 'release' && github.event.action == 'released' || inputs.pub_sbt) }}
+        if: ${{ github.event_name == 'release' && github.event.action == 'released' || inputs.pub_mcp_sbt }}
         run: sbt ci-release
         env:
           PGP_PASSPHRASE: ${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD }}
@@ -79,12 +84,12 @@ jobs:
         working-directory: mcp
 
       - name: Build Standalone JAR for GitHub Release
-        if: ${{ github.event_name == 'release' && github.event.action == 'released' || inputs.pub_mcp }}
+        if: ${{ github.event_name == 'release' && github.event.action == 'released' || inputs.pub_mcp_gh }}
         run: sbt buildStandalone
         working-directory: mcp
 
       - name: Upload Standalone JAR to GitHub Release
-        if: ${{ github.event_name == 'release' && github.event.action == 'released' }}
+        if: ${{ github.event_name == 'release' && github.event.action == 'released' || inputs.pub_mcp_gh }}
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -104,7 +109,6 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         working-directory: js/npm
 
-      # Publishes only the version specified in mcp-npm/package.json
       - name: Publish MCP NPM
         if: ${{ github.event_name == 'release' && github.event.action == 'released' || inputs.pub_mcp_npm }}
         run: |
