fix(ci): skip clean in ci-release to preserve apex-ls JAR for MCP build
The ci-release plugin runs 'clean' by default before publishing, which
removes the apex-ls JAR from jvm/target/. The MCP build depends on this
JAR being present. Setting CI_CLEAN="" skips the clean step.

--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -68,6 +68,7 @@ jobs:
         if: ${{ github.event_name == 'release' && github.event.action == 'released' || inputs.pub_sbt }}
         run: sbt ci-release
         env:
+          CI_CLEAN: "" # Skip clean - MCP build needs apex-ls JAR in target/
           PGP_PASSPHRASE: ${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD }}
           PGP_SECRET: ${{ secrets.OSSRH_GPG_SECRET_KEY_BASE64 }}
           SONATYPE_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
